--- a/index.html
+++ b/index.html
@@ -1072,7 +1072,7 @@
    
    <div class="christmas">
     <div class="message">
-        <audio id="audio" src="./hi.mp3" preload="auto" autoplay></audio>
+        <audio id="audio" src="./hi.mp3"autoplay></audio>
         <h1>Merry Christmas!</h1>
         <h2>NGÔ VĂN TRÀ</h2>
     </div>
