--- a/index.html
+++ b/index.html
@@ -1054,13 +1054,20 @@
     background-position: 0px 200px, 0 200px, 0px 200px, 0px 200px;
   }
 }
-
+#btn{
+    display: none;
+}
 
 </style>
 
 <body id="body" style="display:flex; align-items: center;justify-content: center;height: 100vh;">
-    
+   
+    <div id="hi" style="text-align:center ;">
+        <h1>HI CHÀO CẬU</h1>
+        <P><button>bấm vào đây nhé!</button></P>
+    </div>
     <div id="btn" style="width:30%;">
+        <div id="hihi">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 150 88.4" enable-background="new 0 0 150 88.4" xml:space="preserve" style="fill: rgb(0, 0, 0);" role="img" aria-label="Valentine Envelope Line Icon">
             <path d="M60.1,38.6c3.4-3.4,9-3.4,12.4,0l1.2,1.1l1.2-1.1c3.4-3.4,9-3.4,12.4,0c0.4,0.4,0.7,0.7,1,1.1L140,4.8H10.1  L60.1,38.6L60.1,38.6z" style="fill: none;"></path>
             <path d="M89.8,44.8c0,2.3-0.9,4.6-2.6,6.2L75.4,62.9c-0.5,0.5-1.1,0.7-1.7,0.7s-1.2-0.2-1.7-0.7L60.1,51  c-1.7-1.7-2.6-3.9-2.6-6.2c0-0.7,0.1-1.3,0.2-2L4.8,7.2v75.4c0,0.6,0.5,1,1,1h138.3c0.6,0,1-0.5,1-1V7.2L89.8,44.5  C89.8,44.6,89.8,44.7,89.8,44.8z" style="fill: none;"></path>
@@ -1068,11 +1075,12 @@
             <g id="__id3_s23t51u2c"><path d="M90.2,43.7c-0.1-1.8-0.6-3.4-1.6-4.9c-0.3-0.4-0.6-0.8-1-1.2c-3.5-3.5-9.2-3.5-12.7,0l-1.2,1.2l-1.2-1.2  c-3.5-3.5-9.2-3.5-12.7,0c0,0,0,0,0,0c-1.2,1.2-2,2.7-2.4,4.4c-0.1,0.6-0.2,1.3-0.2,2c0,2.4,0.9,4.7,2.6,6.4L72,62.5  c0.5,0.5,1.1,0.7,1.8,0.7c0.6,0,1.3-0.2,1.8-0.7l12.1-12.1c1.7-1.7,2.6-4,2.6-6.4C90.3,43.9,90.2,43.8,90.2,43.7z M73.7,57.3  L63.3,46.9c-0.4-0.4-0.7-0.9-0.9-1.5c-0.2-0.4-0.2-0.9-0.2-1.4c0-1.1,0.4-2.1,1.2-2.9c0.2-0.2,0.5-0.4,0.8-0.6  c0.6-0.4,1.3-0.6,2.1-0.6c1.1,0,2.1,0.4,2.9,1.2l2.9,2.9c1,1,2.5,1,3.5,0l2.9-2.9c1.6-1.6,4.1-1.6,5.7,0c0.1,0.1,0.2,0.3,0.4,0.4  c1.2,1.6,1.1,3.8-0.4,5.3l-2.9,2.9L73.7,57.3z" style="fill: rgb(207, 94, 116);"></path></g>
             </svg>
             <h1 style="text-align: center;color:#de2f32">Nhấn vào thư nhé !!!</h1>
+            </div>
     </div>
    
    <div class="christmas">
     <div class="message">
-        <audio id="audio" src="./hi.mp3"autoplay></audio>
+        <audio id="audio" src=""autoplay></audio>
         <h1>Merry Christmas!</h1>
         <h2>NGÔ VĂN TRÀ</h2>
     </div>
@@ -1099,6 +1107,12 @@
    
    </div>
    <script>
+   
+        document.querySelector("#hi").onclick=function(){
+            document.querySelector("#hi").style.display='none';
+            document.querySelector("#btn").style.display='block';
+            document.getElementById("audio").src="./hi.mp3";
+        }
         document.querySelector("#btn").onclick = function (){
             document.querySelector("#btn").style.display='none';
             document.querySelector(".christmas").style.display='block';
